--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -5,11 +5,20 @@
 @media screen and (max-width : 576px) {
 
     .hero-tagline h1 {
-        line-height: 52px;
+        line-height: 56px;
+        font-size: 40px;
+    }
+
+    .hero-tagline p{
+        
+        font-size: 18px;
+        
+     
+      
     }
 
     .img-hero {
-        width: 80%;
+        width: 90%;
         height: auto;
     }
 
@@ -26,10 +35,7 @@
         margin: 15px 0px;
     }
 
-    .navbar {
-        background-color: var(--pr-color);
-    }
-
+  
 
 
     footer a {
@@ -43,6 +49,8 @@
     
     }
 
+
+   
    
     
 }
