--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -49,13 +49,13 @@
     
     }
 
-    .carousel-item .row {
+    /* .carousel-item .row {
         flex-wrap: nowrap;
       }
       .carousel-item .col {
         flex: 0 0 100%;
         max-width: 100%;
-      }
+      } */
 
    
    
