--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -49,6 +49,13 @@
     
     }
 
+    footer p {
+        font-family: Poppins;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 8px;
+    }
+
     /* .carousel-item .row {
         flex-wrap: nowrap;
       }
