--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+  }
+
 :root {
     --pr-color : #87CEEB;
 }
@@ -44,6 +48,12 @@ body {
 .nav-link.active {
     font-weight: 400;
 }
+
+.nav-link:hover {
+    color: #000;
+}
+
+
 
 /* Hero Section */
 
@@ -105,7 +115,7 @@ h2{
 
 .card-visimisi{
     width: 100%;
-    height: 350px;
+    height: 400px;
     border-radius: 5px;
     background-color: #ffffff;
     padding: 40px;
@@ -142,7 +152,7 @@ h2{
 
 .card-visimisi:hover{
     width: 100%;
-    height: 350px;
+    height: 400px;
     border-radius: 5px;
     background : linear-gradient(160deg, var(--pr-color), #1f4858);
     padding: 40px;
@@ -493,3 +503,13 @@ footer a {
     text-decoration: none;
 
 }
+
+ /* Tambahan CSS untuk mempercantik modal */
+ .modal-header {
+    background-color: var(--pr-color);
+    color: white;
+}
+.modal-title {
+    font-weight: bold;
+}
+
