--- a/CSS/style.css
+++ b/CSS/style.css
@@ -513,3 +513,12 @@ footer a {
     font-weight: bold;
 }
 
+.btn-admin {
+    background-color: #000000;
+}
+
+.btn-admin:hover {
+    color: #2f65c2;
+    border-radius: 10px;
+}
+
